patterns/circuit-breaker/frontend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: circuit-breaker-frontend
  namespace: circuit-breaker-frontend-app
  labels:
    app: circuit-breaker-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: circuit-breaker-frontend
  template:
    metadata:
      labels:
        app: circuit-breaker-frontend
    spec:
      containers:
        - name: circuit-breaker-frontend
          image: povarovaa/circuit-breaker-frontend:latest
          ports:
            - containerPort: 3000
