patterns/circuit-breaker/frontend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: circuit-breaker-frontend
  namespace: circuit-breaker-frontend-app
  labels:
    app: circuit-breaker-frontend
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: circuit-breaker-frontend
