patterns/circuit-breaker/frontend/manifests/istio-getaway.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - api-gateway
  http:
    - match:
        - uri:
            prefix: /api/v1 # Все запросы с /api/v1 идут в Flask
      route:
        - destination:
            host: flask-service
            port:
              number: 5000
    - match:
        - uri:
            prefix: /api/v2 # Все запросы с /api/v2 идут в дополнительный Python-сервис
      route:
        - destination:
            host: python-service
            port:
              number: 5000
    - match:
        - uri:
            prefix: / # Остальные запросы направляются в React
      route:
        - destination:
            host: react-service
            port:
              number: 80
